--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -9,54 +9,42 @@ body:
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
-  - type: textarea
-    id: what-happened
-    attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
-    validations:
-      required: true
+
   - type: dropdown
     id: version
     attributes:
       label: Version
-      description: What version of our software are you running?
+      description: 사용버전?
       options:
         - 1.0.2 (Default)
         - 1.0.3 (Edge)
     validations:
       required: true
+      
   - type: dropdown
-    id: browsers
+    id: apptype
     attributes:
-      label: What browsers are you seeing the problem on?
+      label: App type
       multiple: true
       options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
+        - Store App
+        - User App
+
+  - type: dropdown
+    id: ostype
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      label: OS type
+      multiple: true
       options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+        - Android
+        - iOS
+
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: Issue Description
+      description: 재현을 위한 사전조건및 재현에 이르기까지의 과정과 이슈내용
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
+    validations:
+      required: true
